[project]
name = "fraudintelligentresponsecache"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "joblib>=1.5.2",
    "langchain-core>=0.3.79",
    "langgraph>=1.0.0a4",
    "numpy>=2.3.3",
    "openai>=2.3.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "redis[async]>=6.4.0",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.37.0",
    "asyncpg>=0.30.0",
]
